--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/lab": "^5.0.0-alpha.150",
     "@mui/material": "^5.14.13",
     "@phosphor-icons/react": "^2.0.13",
     "react": "^18.2.0",
