--- a/client/package.json
+++ b/client/package.json
@@ -16,9 +16,11 @@
     "@mui/lab": "^5.0.0-alpha.150",
     "@mui/material": "^5.14.13",
     "@phosphor-icons/react": "^2.0.13",
+    "axios": "^1.6.1",
     "env-cmd": "^10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
