--- a/client/package.json
+++ b/client/package.json
@@ -17,12 +17,15 @@
     "@mui/lab": "^5.0.0-alpha.150",
     "@mui/material": "^5.14.13",
     "@phosphor-icons/react": "^2.0.13",
+    "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.1",
     "env-cmd": "^10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
-    "react-router-dom": "^6.16.0"
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.16.0",
+    "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
