--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "mongoose": "^8.0.0",
     "nodemailer": "^6.9.7",
+    "socket.io": "^4.7.2",
     "zod": "^3.22.4",
     "zod-validation-error": "^2.1.0"
   }
